--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Sooner | SoonLaunch</title>
+    <title>TechSeed |  Nuturing Your Digital Growth</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="author" content="SoonLaunch" />
+    <meta name="author" content="TechSeed (Pvt)Ltd." />
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png" />
     <!-- Place favicon.ico in the root directory -->
 
